--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,33 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <mandysax.tablayout.TabLayout
-        android:id="@+id/top_nav"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-        android:overScrollMode="never"
-        app:tabModel="scrollable" />
-
-    <EditText
-        android:id="@+id/edit_frame"
-        style="@style/AppEditTextStyle"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="@dimen/default_margin"
-        android:autofillHints="no"
-        android:drawableStart="@drawable/ic_round_search_24"
-        android:hint="@string/search_hint"
-        android:imeOptions="actionSearch"
-        android:inputType="text"
-        android:singleLine="true"
-        android:textSize="15sp" />
+    <include layout="@layout/layout_toolbar" />
 
     <mandysax.fragmentpage.widget.FragmentPage
         android:id="@+id/home_fragment_page"
