--- a/app/src/main/res/layout/fragment_musichall.xml
+++ b/app/src/main/res/layout/fragment_musichall.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<studio.mandysa.statelayout.StateLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/state_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:overScrollMode="never" />
+
+</studio.mandysa.statelayout.StateLayout>
