废弃FragmentPage 使用新的ViewPager 修复父Fragment移除时子Fragment没有得到正确处理的bug Fragment Api整理 修复了部分隐患 Fragment父view消失时的处理方式改为警告

--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -37,7 +37,6 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:overScrollMode="never" />
+            android:layout_height="match_parent" />
     </studio.mandysa.statelayout.StateLayout>
 </LinearLayout>
