--- a/app/src/main/res/layout/item_my_playlist.xml
+++ b/app/src/main/res/layout/item_my_playlist.xml
@@ -32,8 +32,8 @@
 
             <TextView
                 android:id="@+id/playlist_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:lines="1"
                 android:singleLine="true"
                 android:textColor="@android:color/black"
@@ -41,8 +41,8 @@
 
             <TextView
                 android:id="@+id/author_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/text_margin_small"
                 android:lines="1"
                 android:singleLine="true"
