--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -33,7 +33,7 @@
             <TextView
                 android:id="@+id/song_name"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:lines="1"
                 android:singleLine="true"
                 android:textColor="@android:color/black"
@@ -42,7 +42,7 @@
             <TextView
                 android:id="@+id/song_singer_name"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/text_margin_small"
                 android:lines="1"
                 android:singleLine="true"
