--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,7 +21,8 @@
     </style>
 
     <style name="AppSmallTitleStyle">
-        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">17sp</item>
         <item name="android:textColor">@android:color/black</item>
     </style>
 
