--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="bottom"
+        app:umanoClipPanel="true"
         app:umanoPanelHeight="0dp"
         app:umanoShadowHeight="@dimen/umano_shadow_height">
 
