--- a/app/src/main/res/layout/item_me_playlist_rv.xml
+++ b/app/src/main/res/layout/item_me_playlist_rv.xml
@@ -22,6 +22,5 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playlist_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:overScrollMode="never" />
+        android:layout_height="wrap_content" />
 </LinearLayout>
