--- a/app/src/main/res/layout/item_playlist_square_rv.xml
+++ b/app/src/main/res/layout/item_playlist_square_rv.xml
@@ -9,9 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/default_margin"
         android:layout_marginBottom="@dimen/text_margin_small"
-        android:text="@string/toplist" />
+        android:text="@string/playlist_square" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
@@ -34,6 +33,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginBottom="@dimen/text_margin_small"
-        android:text="@string/recommended_newsong" />
+        android:text="@string/recommend_newsong" />
 
 </LinearLayout>
