--- a/app/src/main/res/layout/item_me_playlist_rv.xml
+++ b/app/src/main/res/layout/item_me_playlist_rv.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/default_margin"
+        android:layout_marginVertical="@dimen/default_margin"
         android:background="?android:attr/dividerVertical" />
 
     <TextView
@@ -16,11 +16,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-        android:layout_marginVertical="@dimen/text_margin_small"
+        android:layout_marginBottom="@dimen/text_margin_small"
         android:text="@string/me_playlist" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/playlist_list"
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:paddingEnd="@dimen/activity_horizontal_margin" />
 </LinearLayout>
