--- a/app/src/main/res/layout/item_playlist_square_rv.xml
+++ b/app/src/main/res/layout/item_playlist_square_rv.xml
@@ -33,6 +33,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginBottom="@dimen/text_margin_small"
-        android:text="@string/recommend_newsong" />
+        android:text="@string/new_song_express" />
 
 </LinearLayout>
