--- a/app/src/main/res/layout/item_recommend_playlist_rv.xml
+++ b/app/src/main/res/layout/item_recommend_playlist_rv.xml
@@ -15,7 +15,7 @@
         android:text="@string/recommend_playlist" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/playlist_list"
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipToPadding="false"
