--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,7 +25,7 @@
         <item name="android:gravity">center|start</item>
         <item name="android:textSize">16sp</item>
         <item name="android:paddingHorizontal">10dp</item>
-        <item name="android:background">@drawable/all_et_bg</item>
+        <item name="android:background">@drawable/search_et_bg</item>
     </style>
 
     <style name="AppButtonStyle">
@@ -38,11 +38,9 @@
     </style>
 
     <style name="TransparentDialog" parent="@android:style/Theme.Dialog">
-        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowBackground">@android:color/black</item>
         <!--是否浮现在activity之上-->
         <item name="android:windowIsFloating">true</item>
-        <!--是否模糊-->
-        <item name="android:backgroundDimEnabled">true</item>
     </style>
 
     <!--无边框dialog-->
