--- a/app/src/main/res/anim/nav_enter_anim.xml
+++ b/app/src/main/res/anim/nav_enter_anim.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
-            android:duration="@integer/anim_time"
-            android:fromXDelta="100%p"
-            android:toXDelta="0"/>
+        android:duration="@integer/general_animation_duration"
+        android:fromXDelta="100%p"
+        android:toXDelta="0" />
 </set>
