--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
     <include layout="@layout/layout_toolbar" />
 
     <mandysax.viewpager.widget.ViewPager
-        android:id="@+id/view_pager"
+        android:id="@+id/home_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
