--- a/app/src/main/res/layout/item_playlist_head.xml
+++ b/app/src/main/res/layout/item_playlist_head.xml
@@ -3,57 +3,53 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-    android:orientation="vertical">
+    android:layout_marginVertical="@dimen/activity_vertical_margin"
+    android:background="@drawable/all_view_card_bg"
+    android:orientation="horizontal"
+    android:padding="@dimen/activity_vertical_margin">
+
+    <androidx.cardview.widget.CardView
+        style="@style/ImageCardViewStyle"
+        android:layout_width="110dp"
+        android:layout_height="110dp">
+
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/cover"
+            style="@style/ImageViewStyle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:foreground="?android:attr/selectableItemBackground" />
+
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:orientation="vertical">
 
-        <androidx.cardview.widget.CardView
-            style="@style/ImageCardViewStyle"
-            android:layout_width="110dp"
-            android:layout_height="110dp">
-
-            <com.facebook.drawee.view.SimpleDraweeView
-                android:id="@+id/cover"
-                style="@style/ImageViewStyle"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:foreground="?android:attr/selectableItemBackground" />
-
-        </androidx.cardview.widget.CardView>
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/playlist_title"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:gravity="center|start"
+            android:lines="2"
+            android:text="@string/test"
+            android:textColor="@color/tv_color_title"
+            android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/playlist_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center|start"
-                android:text="@string/test"
-                android:textColor="@color/tv_color_title"
-                android:textSize="18sp" />
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/playlist_info"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginVertical="@dimen/default_margin"
+            android:layout_weight="1.0"
+            android:ellipsize="end"
+            android:lines="2"
+            android:text="@string/test"
+            android:textColor="@color/tv_color_light"
+            android:textSize="15sp" />
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/playlist_info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="@dimen/default_margin"
-        android:text="@string/test"
-        android:textColor="@color/tv_color_light" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="?android:attr/dividerVertical" />
 
 </LinearLayout>
