--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         android:background="@android:color/white">
 
         <mandysax.tablayout.TabLayout
-            android:id="@+id/bottomNavigationBar"
+            android:id="@+id/main_bottom_navigation_bar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/nav_height"
             android:overScrollMode="never" />
