--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent" />
 
     <mandysax.tablayout.TabLayout
-        android:id="@+id/bottomNavigationBar"
+        android:id="@+id/play_bottom_navigation_bar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/nav_height"
         android:layout_alignParentBottom="true"
@@ -18,9 +18,9 @@
         android:overScrollMode="never" />
 
     <mandysax.viewpager.widget.ViewPager
-        android:id="@+id/view_pager"
+        android:id="@+id/play_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/bottomNavigationBar" />
+        android:layout_above="@id/play_bottom_navigation_bar" />
 
 </RelativeLayout>
