--- a/app/src/main/res/layout/fragment_lyric.xml
+++ b/app/src/main/res/layout/fragment_lyric.xml
@@ -1,59 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:keepScreenOn="true"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical">
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-            android:layout_marginVertical="@dimen/item_margin"
-            app:cardCornerRadius="@dimen/card_corner_radius"
-            app:cardElevation="5dp">
-
-            <com.facebook.drawee.view.SimpleDraweeView
-                android:id="@+id/song_cover"
-                style="@style/ImageViewStyle"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-        </androidx.cardview.widget.CardView>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/song_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:lines="1"
-                android:singleLine="true"
-                android:textColor="@android:color/white"
-                android:textSize="15sp" />
-
-            <TextView
-                android:id="@+id/song_singer_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/text_margin_small"
-                android:lines="1"
-                android:singleLine="true"
-                android:textColor="@color/translucent_white"
-                android:textSize="13sp" />
-
-        </LinearLayout>
-
-    </LinearLayout>
+    <include layout="@layout/layout_play_toolbar" />
 
     <TextView
         android:id="@+id/lyric_tv"
